overlay: Make sure all overlays have the same box shadow in dark mode.
Drafts, scheduled messages and message edit history had different
box-shadow done in #25771. The main reason for the different color was
for these overlays with the new background colors to play nice with the
then message/sidebar sections using the old background colors. Since
there is no such difference anymore, we can have one box-shadow for all
overlays.

--- a/web/styles/dark_theme.css
+++ b/web/styles/dark_theme.css
@@ -113,14 +113,6 @@
         box-shadow: 0 0 30px hsl(212deg 32% 7%);
     }
 
-    #draft_overlay,
-    #scheduled_messages_overlay_container,
-    #message-edit-history-overlay-container {
-        .flex.overlay-content > .overlay-container {
-            box-shadow: 0 0 30px hsl(213deg 31% 0%);
-        }
-    }
-
     .popover hr,
     hr {
         opacity: 0.2;
